python-test_driven_development/tests/2-matrix_divided.txt
>>> matrix_divided = __import__('2-matrix_divided').matrix_divided
>>> matrix = [
...     [1, 2, 3],
...     [4, 5, 6]
... ]
>>> matrix_divided(matrix, 3)
[[0.33, 0.67, 1.0], [1.33, 1.67, 2.0]]
>>> matrix_divided(matrix, 5.5)
[[0.18, 0.36, 0.55], [0.73, 0.91, 1.09]]
>>> matrix_divided((1, 2, 3), 3)
Traceback (most recent call last):
  File "<python-input-12>", line 1, in <module>
    matrix_divided((1, 2, 3), 3)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "/Users/altyt/Akatsuki667/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 28, in matrix_divided
    Exemples:
        ^^^^^
TypeError: matrix must be a matrix (list of lists) of integers/floats
>>> matrix_divided(matrix, "hello")
Traceback (most recent call last):
  File "<python-input-14>", line 1, in <module>
    matrix_divided(matrix, "hello")
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/Users/altyt/Akatsuki667/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 31, in matrix_divided
    >>> matrix_divided(matrix, 5.5)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: div must be a number
>>> matrix_divided(matrix, 0)
Traceback (most recent call last):
  File "<python-input-13>", line 1, in <module>
    matrix_divided(matrix, 0)
    ~~~~~~~~~~~~~~^^^^^^^^^^^
  File "/Users/altyt/Akatsuki667/holbertonschool-higher_level_programming/python-test_driven_development/2-matrix_divided.py", line 34, in matrix_divided
ZeroDivisionError: division by zero
